--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Welcome to find a lawyer !</h1>
+<p>Find the lawyer you need and get out of troubles</p>
+<p>As a lawyer, get visibility and develop your own independant activity</p>
