--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,16 +6,13 @@
 <p>We can make it legal</p>
 
 <form class="form-inline search-bar" action="#" accept-charset="UTF-8" method="get">
-
     <div class="input-group">
-
-
       <input placeholder="Robert Kardashian" class="form-control" id="query" title="Words expected" type="text" name="keyword">
       <span class="input-group-btn">
         <button name="button" type="submit" class="btn btn-primary">
           Search lawyers
-</button>      </span>
-
+        </button>
+      </span>
     </div>
 </form>
 <!-- <p>As a lawyer, get visibility and develop your own independant activity</p> -->
