--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,14 +1,20 @@
 /* Main navbar */
+
 .navbar-wagon {
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+  width: 100%;
+  position: fixed;
+  top: 0;
+  // box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background: white;
   transition: all 0.3s ease;
-  height: 70px;
+  height: 50px;
   padding: 0px 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
+// .homepage .navbar-wagon {position:fixed;}
 
 /* Logo */
 .navbar-wagon-brand img {
@@ -37,8 +43,8 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-  color: #616668;
-  font-size: 14px;
+  color: black;
+  font-size: 16px;
 }
 .navbar-wagon-link:hover {
   color: #da552f;
