Added button components

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,4 +15,5 @@
     <%= javascript_pack_tag 'application' %>
   </body>
   <%= render 'shared/footer' %>
+  <%= render 'shared/button' %>
 </html>
