--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,7 +8,7 @@
         <a href="#"><i class="fab fa-linkedin"></i></a>
       </div>
       <div class="footer-copyright">
-      This footer is made with <i class="fa fa-heart"></i> by the team of Adrenabid
+      This footer is made with <i class="fa fa-heart"></i> by the team Adrenabid
       </div>
     </div>
   </footer>
