--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   bottom: 0;
   width: 100%;
-  background: #F4F4F4;
+  background: #F4F4F4;;
   display: flex;
   align-items: center;
   justify-content: space-between;
