--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,10 +2,10 @@
 
 .navbar-wagon {
   width: 100%;
-  position: fixed;
+  // position: fixed;
   top: 0;
   // box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background:  #F4F4F4;;
   transition: all 0.3s ease;
   height: 50px;
   padding: 0px 30px;
