--- a/app/views/lawyers/index.html.erb
+++ b/app/views/lawyers/index.html.erb
@@ -1,2 +1,11 @@
 <h1>Lawyers#index</h1>
 <p>Find me in app/views/lawyers/index.html.erb</p>
+
+<ul>
+  <% @lawyers.each do |lawyer| %>
+    <li>
+    <%= lawyer.user.first_name %>
+    <%= lawyer.specialties %>
+    </li>
+  <% end %>
+</ul>
