new button added for i am a lawyer

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -16,7 +16,7 @@
 }
 
 .btn-medium {
-  color: #999999;
+  color: white;
   border: 1px solid #999999;
   padding: 10px 15px;
   border-radius: 7px;
