--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,21 +1,24 @@
 
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.fastcompany.net/image/upload/w_596,c_limit,q_auto:best,f_auto,fl_lossy/fc/3051938-inline-i-3-why-being-a-good-lawyer-means-being-a-great-actor.jpg');">
   <div class="banner-content">
+    <h1>Welcome to Find a Lawyer !</h1>
+    <p>We can make it legal</p>
 
-<h1>Welcome to Find a Lawyer !</h1>
-<p>We can make it legal</p>
-
-<form class="form-inline search-bar" action="#" accept-charset="UTF-8" method="get">
-    <div class="input-group">
-      <input placeholder="Robert Kardashian" class="form-control" id="query" title="Words expected" type="text" name="keyword">
-      <span class="input-group-btn">
-        <button name="button" type="submit" class="btn btn-primary">
-          Search lawyers
-        </button>
-      </span>
-    </div>
-</form>
+    <form class="form-inline search-bar" action="#" accept-charset="UTF-8" method="get">
+        <div class="input-group">
+          <input placeholder="Robert Kardashian" class="form-control" id="query" title="Words expected" type="text" name="keyword">
+          <span class="input-group-btn">
+            <button name="button" type="submit" class="btn btn-primary">
+              Search lawyers
+            </button>
+          </span>
+        </div>
+    </form>
 <!-- <p>As a lawyer, get visibility and develop your own independant activity</p> -->
-
+<br>
+<br>
+<br>
+<br>
+<a href="#" class="btn-medium">I am a lawyer</a>
   </div>
 </div>
