--- a/app/views/lawyers/index.html.erb
+++ b/app/views/lawyers/index.html.erb
@@ -26,7 +26,7 @@
             <h2>Peter Richter</h2>
             <p>Business Law</p>
           </div>
-          <img class="card-user avatar avatar-large" src="images/jad.png">
+          <img class="card-user avatar avatar-large" src="images/Hold.jpg">
           <a class="card-link" href="#" ></a>
         </div>
         <div class="card-footer">
@@ -54,7 +54,7 @@
             <h2>Christian Rath</h2>
             <p>Inheritance Law</p>
           </div>
-          <img class="card-user avatar avatar-large" src="images/cecile.png">
+          <img class="card-user avatar avatar-large" src="images/Richter.jpg">
           <a class="card-link" href="#" ></a>
         </div>
         <div class="card-footer">
