add registrations stuffs but still not working well. Does not go from signin user form to lawyer form.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,6 +19,10 @@
 <br>
 <br>
 <br>
+
+<%= link_to "Find a lawyer", new_user_registration_path %>
+<%= link_to "Im a lawyer", new_user_registration_path(lawyer: true) %>
+
 <a href="#" class="btn-medium">I am a lawyer</a>
   </div>
 </div>
