--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,8 @@
     <%= f.input :email, required: true, autofocus: true %>
     <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
     <%= f.input :password_confirmation, required: true %>
+   <!--  hidden field in case the user clicked on the "I am a lawyer button" Should then be redirected to lawyer form. -->
+    <%= f.input :lawyer, :as => :hidden, :input_html => { :value => params[:lawyer] } %>
 
   </div>
 
