Benefits section added.  I am a lawyer button added.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,6 +8,7 @@
         <div class="input-group">
           <input placeholder="Robert Kardashian" class="form-control" id="query" title="Words expected" type="text" name="keyword">
           <span class="input-group-btn">
+
             <button name="button" type="submit" class="btn btn-primary">
               Search lawyers
             </button>
@@ -19,6 +20,61 @@
 <br>
 <br>
 <br>
-<a href="#" class="btn-medium">I am a lawyer</a>
+<%= link_to "I am a lawyer", new_user_session_path, class: "btn-medium" %>
+
   </div>
 </div>
+
+<div class="wrapper-grey ">
+      <div class="container">
+        <h3 style="text-align: center;">Discover the benefits of Find a Lawyer</h3>
+        <div class="row" style="text-align: center;">
+           <div class="col-xs-12 col-md-4 " >
+            <div class="card-white">
+               <h1>
+              <i class="fas fa-star"></i>
+
+
+            </h1>
+            <h3 >Simplicity
+            </h4>
+              <p>
+                Our streamlined platform means your ideal lawyer is only a few clicks away!
+              </p>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-md-4" style="text-align: center;">
+            <div class="card-white">
+              <h1>
+              <i class="fas fa-money-bill-wave"></i>
+
+            </h1>
+            <h3 >Savings
+            </h4>
+              <p>Our lawyers are on average 15% cheaper than walking into a high street lawyers' office
+              <p>
+              </p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4" style="text-align: center;">
+            <div class="card-white">
+               <h1>
+              <i class="fas fa-handshake"></i>
+
+
+
+            </h1>
+            <h3>Trust
+            </h4>
+              <p>Our careful vetting process and customer feedback system ensures only the highest standard of legal services
+              </p>
+            </div>
+          </div>
+
+
+
+
+        </div>
+      </div>
+    </div>
