--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,6 +19,6 @@
 <br>
 <br>
 <br>
-<a href="#" class="btn-medium">I am a lawyer</a>
+<%= link_to "I am a lawyer", new_user_registration_path, class: "btn-medium" %>
   </div>
 </div>
