--- a/app/views/lawyers/edit.html.erb
+++ b/app/views/lawyers/edit.html.erb
@@ -1,2 +1,26 @@
-<h1>Lawyers#edit</h1>
-<p>Find me in app/views/lawyers/edit.html.erb</p>
+<div class="profile-layout">
+  <div class="profile-layout__container container">
+    <div class="profile-layout__top-section">
+      <div class="col-sm-4">
+        <img src="Richter.jpg" alt="">
+      </div>
+      <div class="col-sm-4"></div>
+      <div class="col-sm-4"></div>
+
+    </div>
+    <div class="profile-layout__bottom-section">
+      <div class="col-sm-7">
+        <div class="row">
+          <div class="col-sm-6"></div>
+          <div class="col-sm-6"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
+
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-5"></div>
+    </div>
+  </div>
+</div>
