Lawyer benefits added and I am lawyer link fixed

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,14 +20,16 @@
 <br>
 <br>
 <br>
-<%= link_to "I am a lawyer", new_user_session_path, class: "btn-medium" %>
+<%= link_to "I am a lawyer", new_user_registration_path, class: "btn-medium" %>
 
   </div>
 </div>
 
-<div class="wrapper-grey ">
+<div class="wrapper-grey">
       <div class="container">
-        <h3 style="text-align: center;">Discover the benefits of Find a Lawyer</h3>
+        <h2 style="text-align: center;">Discover the benefits of Find a Lawyer</h2>
+        <br>
+         <h3 style="text-align: center;">For customers...</h3>
         <div class="row" style="text-align: center;">
            <div class="col-xs-12 col-md-4 " >
             <div class="card-white">
@@ -71,6 +73,63 @@
               </p>
             </div>
           </div>
+        </div>
+      </div>
+
+      <div class="wrapper-blue" style="width: 100%;">
+
+      <div class="container-fluid" style="width: 100%;">
+        <h3 style="text-align: center;">And for Lawyers...</h3>
+
+
+        <div class="row" style="text-align: center;">
+           <div class="col-xs-12 col-md-4 " >
+            <div class="card-white">
+               <h1>
+              <i class="far fa-calendar-alt"></i>
+
+
+            </h1>
+            <h3 >Bookings
+            </h4>
+              <p>
+                Fill your calendar.  Our lawyers experience a 30% increase in bookings
+              </p>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-md-4" style="text-align: center;">
+            <div class="card-white">
+              <h1>
+              <i class="fas fa-clock"></i>
+
+
+
+            </h1>
+            <h3 >Time
+            </h4>
+              <p>Our simple bookings system means you can reduce your admin time and focus on your clients
+              <p>
+              </p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4" style="text-align: center;">
+            <div class="card-white">
+               <h1>
+
+              <i class="fas fa-money-bill-wave"></i>
+
+
+
+            </h1>
+            <h3>Costs
+            </h4>
+              <p>No need to hire expensive admin staff - we take care of everything
+              </p>
+            </div>
+          </div>
+
+
 
 
 
