add gem geocoder and add a ugly map div in index

--- a/app/views/lawyers/index.html.erb
+++ b/app/views/lawyers/index.html.erb
@@ -1,40 +1,38 @@
 
 <html>
 <head>
-  <h2 class="text-center">Your list of lawyers</h2>
-
-  <div class="container">
-  <% @lawyers.each do |lawyer| %>
-
-
-    <div class="col-xs-12 col-sm-4">
-      <div class="cards">
-        <div class="card">
-          <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('https://www.ihk.ch/sites/default/files/styles/panopoly_image_original/public/recht.jpg?itok=dE7wOzri');">
-            <span class="card-category"><%= lawyer.specialties.first %></span>
-            <div class="card-description">
-              <h2><%= lawyer.user.first_name %></h2>
-              <p><%= lawyer.address %></p>
-            </div>
-            <%= link_to lawyer_path(lawyer), class: "card-link" do %>
-            <% end %>
-
-          </div>
-          <div class="card-footer">
-            <p><%= lawyer.professional_email %></p>
-            <p>Member since 10/05/18</p>
-          </div>
-        </div>
-      </div>
-    </div>
-      <% end %>
-  </div>
-
-
 
 
 </head>
 <body>
+  <h2 class="text-center">Your list of lawyers</h2>
+  <div class="wrapper">
+
+    <div class="container">
+      <% @lawyers.each do |lawyer| %>
+      <div class="col-xs-12 col-sm-6 ">
+        <div class="cards">
+          <div class="card">
+            <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('https://www.ihk.ch/sites/default/files/styles/panopoly_image_original/public/recht.jpg?itok=dE7wOzri');">
+              <span class="card-category"><%= lawyer.specialties.first %></span>
+              <div class="card-description">
+                <h2><%= lawyer.user.first_name %></h2>
+                <p><%= lawyer.address %></p>
+              </div>
+              <%= link_to lawyer_path(lawyer), class: "card-link" do %>
+              <% end %>
+            </div>
+            <div class="card-footer">
+              <p><%= lawyer.professional_email %></p>
+              <p>Member since 10/05/18</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <% end %>
+      <div id="map" data-markers="<%= @markers.to_json %>">map</div>
+
+  </div>
 </body>
 </html>
 
