--- a/app/views/lawyers/show.html.erb
+++ b/app/views/lawyers/show.html.erb
@@ -1,3 +1,4 @@
 <h1>Lawyers#show</h1>
 <p>Find me in app/views/lawyers/show.html.erb</p>
 <img src='https://kitt.lewagon.com/placeholder/users/alex-felix' class="avatar-large"/>
+<div id="map">map</div>
