--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
   <body>
 
     <%= yield %>
+
     <%= javascript_include_tag 'application' %>
+      <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js" %>
     <%= javascript_pack_tag 'application' %>
   </body>
   <%= render 'shared/footer' %>
