add env api keys, map appears but cannot read property of undefined

--- a/app/views/lawyers/index.html.erb
+++ b/app/views/lawyers/index.html.erb
@@ -30,7 +30,7 @@
         </div>
       </div>
       <% end %>
-      <div id="map" data-markers="<%= @markers.to_json %>">map</div>
+      <div id="map">map</div>
 
   </div>
 </body>
