--- a/app/views/lawyers/index.html.erb
+++ b/app/views/lawyers/index.html.erb
@@ -11,7 +11,7 @@
       <div class="cards">
         <div class="card">
           <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('https://www.ihk.ch/sites/default/files/styles/panopoly_image_original/public/recht.jpg?itok=dE7wOzri');">
-            <span class="card-category"><%= lawyer.specialties.first %></span>
+            <span class="card-category"><%= lawyer.specialty.name %></span>
             <div class="card-description">
               <h2><%= lawyer.user.first_name %></h2>
               <p><%= lawyer.address %></p>
