--- a/app/views/lawyers/new.html.erb
+++ b/app/views/lawyers/new.html.erb
@@ -7,10 +7,9 @@
 <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
 <div class="form-inputs">
- <%= f.input :specialties %>
+ <%= f.association :specialty, as: :select %>
  <%= f.input :address %>
  <%= f.input :qualification %>
- <%= f.input :professional_email %>
 </div>
 <div class="form-actions">
   <%= f.button :submit %>
