--- a/app/views/lawyers/index.html.erb
+++ b/app/views/lawyers/index.html.erb
@@ -30,7 +30,11 @@
         </div>
       </div>
       <% end %>
-      <div id="map">map</div>
+
+      <div id="map"
+  style="width: 100%;
+  height: 600px;"
+  data-markers="<%= @mapping.to_json %>">map</div>
 
   </div>
 </body>
