--- a/app/views/lawyers/show.html.erb
+++ b/app/views/lawyers/show.html.erb
@@ -15,7 +15,7 @@
 
     <div class="description">
       <div class="description-content">
-        <h2 style="color: black; margin-bottom: 15px;">Why hire <%= @lawyer.user.first_name.capitalize %> ?</h2>
+        <h2 style="color: black; margin-bottom: 15px;">Why hire <%= @lawyer.user.first_name %> ?</h2>
         <br>
         <p class="text-justify" style="color: black;">
          <%= @lawyer.qualification %>
