--- a/app/views/lawyers/index.html.erb
+++ b/app/views/lawyers/index.html.erb
@@ -22,7 +22,7 @@
           </div>
           <div class="card-footer">
             <p><%= lawyer.professional_email %></p>
-            <p>Member since 10/05/18</p>
+            <p>Member since <%= lawyer.created_at.strftime("%Y-%m-%d") %></p>
           </div>
         </div>
       </div>
