--- a/app/views/lawyers/index.html.erb
+++ b/app/views/lawyers/index.html.erb
@@ -13,7 +13,7 @@
           <div class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('https://www.ihk.ch/sites/default/files/styles/panopoly_image_original/public/recht.jpg?itok=dE7wOzri');">
             <span class="card-category"><%= lawyer.specialty.name %></span>
             <div class="card-description">
-              <h2><%= lawyer.user.first_name %></h2>
+              <h2><%= lawyer.user.first_name.capitalize %></h2>
               <p><%= lawyer.address %></p>
             </div>
             <%= link_to lawyer_path(lawyer), class: "card-link" do %>
@@ -21,7 +21,7 @@
 
           </div>
           <div class="card-footer">
-            <p><%= lawyer.professional_email %></p>
+            <p><%= lawyer.user.email %></p>
             <p>Member since <%= lawyer.created_at.strftime("%Y-%m-%d") %></p>
           </div>
         </div>
