search feature backend done

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,10 @@
     <h1>Welcome to Find a Lawyer !</h1>
     <p>We can make it legal</p>
 
+
+
+<!--
+
     <form class="form-inline search-bar" action="#" accept-charset="UTF-8" method="get">
         <div class="input-group">
           <input placeholder="Robert Kardashian" class="form-control" id="query" title="Words expected" type="text" name="keyword">
@@ -14,7 +18,7 @@
             </button>
           </span>
         </div>
-    </form>
+    </form> -->
 <!-- <p>As a lawyer, get visibility and develop your own independant activity</p> -->
 <br>
 <br>
