--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,6 +10,16 @@
   <div class="navbar-wagon-right hidden-xs hidden-sm">
       <% if user_signed_in? %>
       <!-- Links when logged in -->
+      <%= form_tag lawyers_path, method: :get do %>
+      <%= text_field_tag 'term', params[:term], placeholder: "Enter user's name or surname" %>
+
+      <%= button_tag(type: "submit", class: "btn btn-default") do %>
+    <i class="fas fa-search"></i>
+<% end %>
+      <% end %>
+
+
+
       <form class="form-inline search-bar" action="#" accept-charset="UTF-8" method="get">
         <div class="input-group">
           <input placeholder="Search Lawyers" class="form-control" id="query" title="Words expected" type="text" name="keyword">
