--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,7 @@
 <br>
 <br>
 <br>
-<%= link_to "I am a lawyer", new_user_registration_path, class: "btn-medium" %>
+<%= link_to "I am a lawyer", new_lawyer_path, class: "btn-medium" %>
 
   </div>
 </div>
