--- a/app/views/lawyers/show.html.erb
+++ b/app/views/lawyers/show.html.erb
@@ -11,6 +11,23 @@
       </div>
     </div>
 
+<%= simple_form_for [@lawyer, Appointment.new] do |f| %>
+  <div class="modal-body">
+      <div class="form-inputs">
+        <div class="form-row">
+          <%= f.input :date, as: :string, wrapper_html: { :id => "appointment_start_date", :class => "inline_field_wrapper" } %>
+        </div>
+      </div>
+  </div>
+  <div class="modal-footer">
+
+    <%= f.submit :submit, class: "btn btn-base btn-brand" %>
+  </div>
+<% end %>
+
+
+
+
     <div class="description">
       <div class="description-content">
         <h2 style="color: black; margin-bottom: 15px;">Why hire <%= @lawyer.user.first_name %> ?</h2>
