--- a/app/views/lawyers/edit.html.erb
+++ b/app/views/lawyers/edit.html.erb
@@ -1,26 +1,19 @@
-<div class="profile-layout">
-  <div class="profile-layout__container container">
-    <div class="profile-layout__top-section">
-      <div class="col-sm-4">
-        <img src="Richter.jpg" alt="">
-      </div>
-      <div class="col-sm-4"></div>
-      <div class="col-sm-4"></div>
+<h1>Lawyers#new</h1>
 
-    </div>
-    <div class="profile-layout__bottom-section">
-      <div class="col-sm-7">
-        <div class="row">
-          <div class="col-sm-6"></div>
-          <div class="col-sm-6"></div>
-        </div>
-        <div class="row">
-          <div class="col-sm-12">
+<p>Please create you lawyer profile</p>
 
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-5"></div>
-    </div>
-  </div>
+<%= simple_form_for(@lawyer) do |f| %>
+<%= f.error_notification %>
+<%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+
+<div class="form-inputs">
+ <%= f.association :specialty, as: :select %>
+ <%= f.input :address %>
+ <%= f.input :qualification %>
 </div>
+<div class="form-actions">
+  <%= f.button :submit %>
+</div>
+
+
+<% end %>
