--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,6 +11,7 @@
       <% if user_signed_in? %>
       <!-- Links when logged in -->
       <form class="form-inline search-bar" action="#" accept-charset="UTF-8" method="get">
+        <span>Logged in as <%= current_user.first_name %></span>
         <div class="input-group">
           <input placeholder="Search Lawyers" class="form-control" id="query" title="Words expected" type="text" name="keyword">
           <span class="input-group-btn">
