--- a/app/views/lawyers/new.html.erb
+++ b/app/views/lawyers/new.html.erb
@@ -10,6 +10,8 @@
  <%= f.association :specialty, as: :select %>
  <%= f.input :address %>
  <%= f.input :qualification %>
+ <%= cl_image_tag("THE_IMAGE_ID_FROM_LIBRARY",
+      width: 400, height: 300, crop: :fill) %>
 </div>
 <div class="form-actions">
   <%= f.button :submit %>
