index results style improved, map flexbox sorted

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,4 +11,5 @@
 @import "registration-form";
 @import "map";
 @import "profile";
-@import "profile-card"
+@import "profile-card";
+@import "index-grid";
