--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,11 +1,11 @@
-#map {
-  background: red;
-  height: 100vh;
-  width: 50%;
-  float: right;
-}
+// #map {
+//   background: red;
+//   height: 50vh;
+//   width: 50%;
+//   float: right;
+// }
 
-.container {
+.container-map {
   float: left;
   width: 60%;
 }
