--- a/app/views/lawyers/new.html.erb
+++ b/app/views/lawyers/new.html.erb
@@ -1,6 +1,10 @@
-<h1>Lawyers#new</h1>
+<div class="login-form">
+  <br>
+<h3 style="text-align: center;">Please create you lawyer profile</h3>
+  <br>
 
-<p>Please create you lawyer profile</p>
+
+
 
 <%= simple_form_for(@lawyer) do |f| %>
 <%= f.error_notification %>
@@ -17,3 +21,5 @@
 
 
 <% end %>
+
+</div>
