--- a/app/views/lawyers/new.html.erb
+++ b/app/views/lawyers/new.html.erb
@@ -11,9 +11,11 @@
 <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
 <div class="form-inputs">
- <%= f.association :specialty, as: :select %>
- <%= f.input :address %>
- <%= f.input :qualification %>
+  <%= f.association :specialty, as: :select %>
+  <%= f.input :address %>
+  <%= f.input :qualification %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
 </div>
 <div class="form-actions">
   <%= f.button :submit %>
