--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -20,6 +20,12 @@
   right: 10px;
   top: 10px;
 }
+.card-lawyer {
+  position: absolute;
+  left: 250px;
+  bottom: 60px;
+}
+
 .card-category {
   position: absolute;
   top: 10px;
