--- a/app/views/lawyers/edit.html.erb
+++ b/app/views/lawyers/edit.html.erb
@@ -10,6 +10,8 @@
  <%= f.association :specialty, as: :select %>
  <%= f.input :address %>
  <%= f.input :qualification %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
 </div>
 <div class="form-actions">
   <%= f.button :submit %>
