--- a/app/views/lawyers/index.html.erb
+++ b/app/views/lawyers/index.html.erb
@@ -32,6 +32,7 @@
                 <%= link_to lawyer_path(lawyer), class: "card-link" do %>
                 <% end %>
               </div>
+              <div class="card-lawyer"><%= cl_image_tag lawyer.photo, :width=>100, :height=>100, :gravity=>"face", :radius=>"max", :crop=>"fill" %></div>
               <div class="card-footer">
                 <p><%= lawyer.professional_email %></p>
                 <p>Member since <%= lawyer.created_at.to_date.to_formatted_s(:long_ordinal) %></p>
@@ -47,6 +48,7 @@
                 <%= link_to lawyer_path(lawyer), class: "card-link" do %>
                 <% end %>
               </div>
+              <div class="card-lawyer"><%= cl_image_tag lawyer.photo, :width=>100, :height=>100, :gravity=>"face", :radius=>"max", :crop=>"fill" %></div>
               <div class="card-footer">
                 <p><%= lawyer.professional_email %></p>
                 <p>Member since <%= lawyer.created_at.to_date.to_formatted_s(:long_ordinal) %></p>
@@ -62,6 +64,7 @@
                 <%= link_to lawyer_path(lawyer), class: "card-link" do %>
                 <% end %>
               </div>
+              <div class="card-lawyer"><%= cl_image_tag lawyer.photo, :width=>100, :height=>100, :gravity=>"face", :radius=>"max", :crop=>"fill" %></div>
               <div class="card-footer">
                 <p><%= lawyer.professional_email %></p>
                 <p>Member since <%= lawyer.created_at.to_date.to_formatted_s(:long_ordinal) %></p>
@@ -77,6 +80,7 @@
                 <%= link_to lawyer_path(lawyer), class: "card-link" do %>
                 <% end %>
               </div>
+              <div class="card-lawyer"><%= cl_image_tag lawyer.photo, :width=>100, :height=>100, :gravity=>"face", :radius=>"max", :crop=>"fill" %></div>
               <div class="card-footer">
                 <p><%= lawyer.professional_email %></p>
                 <p>Member since <%= lawyer.created_at.to_date.to_formatted_s(:long_ordinal) %></p>
@@ -92,6 +96,7 @@
                 <%= link_to lawyer_path(lawyer), class: "card-link" do %>
                 <% end %>
               </div>
+              <div class="card-lawyer"><%= cl_image_tag lawyer.photo, :width=>100, :height=>100, :gravity=>"face", :radius=>"max", :crop=>"fill" %></div>
               <div class="card-footer">
                 <p><%= lawyer.professional_email %></p>
                 <p>Member since <%= lawyer.created_at.to_date.to_formatted_s(:long_ordinal) %></p>
@@ -110,7 +115,7 @@
             <% end %>
 
             </div>
-
+              <div class="card-lawyer"><%= cl_image_tag lawyer.photo, :width=>100, :height=>100, :gravity=>"face", :radius=>"max", :crop=>"fill" %></div>
             <div class="card-footer">
               <p><%= lawyer.professional_email %></p>
               <p>Member since <%= lawyer.created_at.to_date.to_formatted_s(:long_ordinal) %></p>
