--- a/app/views/lawyers/show.html.erb
+++ b/app/views/lawyers/show.html.erb
@@ -6,7 +6,7 @@
       <div class="main-content">
         <h2 style="color: black"><%= @lawyer.user.first_name %></h2>
         <p>Speciality: <%= @lawyer.specialty.name %></p>
-      <%= cl_image_tag @lawyer.photo, :width=>250, :height=>250, :gravity=>"face", :radius=>"max", :crop=>"crop" %>
+      <%= cl_image_tag @lawyer.photo, :width=>250, :height=>250, :gravity=>"face", :radius=>"max", :crop=>"fill" %>
         <a href="#" class="btn btn-primary">Make an appointment</a>
         <%= simple_form_for [@lawyer, Appointment.new] do |f| %>
         <div class="modal-body">
