NO CHANGE NEEDED

--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -3,15 +3,18 @@
   <%= @appointment.lawyer.user.first_name %></h1>
 <br>
 <br>
-<br>
-<br>
+
 <br><!--
 <div style="color: #00A75A; text-align: center; font-weight: 32px"><%= @appointment.lawyer.user.first_name %></div> -->
 <div style="text-align: center; color: #293168; font-size:40px; ">
+  <div align="center">
+    <iframe src="https://giphy.com/embed/3oz8xODcLLAxb8Qyju" width="124" height="180" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/3oz8xODcLLAxb8Qyju"></a></p>
+  </div>
 <p>Date: <%= @appointment.date %> </p>
 <br>
 <p>Time: <%= @appointment.time %> </p>
 </div>
+
 <br>
 <br>
 
