--- a/app/views/lawyers/index.html.erb
+++ b/app/views/lawyers/index.html.erb
@@ -32,7 +32,7 @@
                 <%= link_to lawyer_path(lawyer), class: "card-link" do %>
                 <% end %>
               </div>
-              <div class="card-lawyer"><%= cl_image_tag lawyer.photo, :width=>100, :height=>100, :gravity=>"face", :radius=>"max", :crop=>"fill" %></div>
+              <div class="card-lawyer"<%= cl_image_tag lawyer.photo, :width=>100, :height=>100, :gravity=>"face", :radius=>"max", :crop=>"fill" %>></div>
               <div class="card-footer">
                 <p><%= lawyer.professional_email %></p>
                 <p>Member since <%= lawyer.created_at.to_date.to_formatted_s(:long_ordinal) %></p>
